renamed assets/demo.css to assets/images.css

--- a/banners/alt-vulcan/index.html
+++ b/banners/alt-vulcan/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aplazame | banners/alt-vulcan</title>
 
-    <link rel="stylesheet" href="/assets/demo.css" />
+    <link rel="stylesheet" href="/assets/images.css" />
 </head>
 <body>
   <table class="images-list">
