Updating README.md files

--- a/.make/demo/images-index.html
+++ b/.make/demo/images-index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>${ page.title }</title>
+  <base href="${ page.BASE_HREF }">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>${ page.title }</title>
 
-    <link rel="stylesheet" href="/assets/images.css" />
+  <link rel="stylesheet" href="/images.css" />
 </head>
-<body>
+<body class="${ page.body_class }">
   ${ page.body }
 </body>
 </html>
