--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>${ page.title }</title>
 
-  <link rel="stylesheet" href="/images.css" />
+  <link rel="stylesheet" href="${ page.CSS_BASE }images.css" />
 </head>
 <body>
   <table class="images-list">
