fullpath for image links

--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -39,7 +39,7 @@
             </table>
           </td>
           <td>
-            <a href="${ file.path }" class="_link" target="_black">${ file.path }</a>
+            <a href="${ file.fullpath }" class="_link" target="_black">${ file.fullpath }</a>
           </td>
       </tr>
       {/}
