--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <base href="/">
+  <base href="https://cdn.aplazame.com/assets/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Aplazame | Assets</title>
 
-  <link rel="stylesheet" href="/images.css" />
+  <link rel="stylesheet" href="/assets/images.css" />
 </head>
 <body class="_md-index">
   <h2 id="logos">Logos</h2>
-<p><a href="/logos/">
+<p><a href="./logos/">
   <img src="logos/logotipo-brand.svg" alt="logotipo-brand">
 </a></p>
 <h2 id="banners">Banners</h2>
-<p><a href="/banners/">
+<p><a href="./banners/">
   <img src="banners/blue/aplazame-banner-blue-728x90-2x-1456x180.png" alt="banner-blue">
   <img src="banners/vulcan/aplazame-banner-vulcan-728x90-2x-1456x180.png" alt="banner-vulcan">
 </a></p>
