--- a/.make/demo/images-index.html
+++ b/.make/demo/images-index.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="${ page.CSS_BASE }images.css" />
 </head>
 <body class="${ page.body_class }">
-  ${ page.body }
+  <header>
+    <ul class="breadcrumb">
+      $each{ link in breadcrumb }
+        <li><a$if{ link.href } href="${ link.href }"{/}>${ link.label }</a></li>
+      {/}
+    </ul>
+  </header>
+  <main>
+  ${ page.main }
+  </main>
 </body>
 </html>
