--- a/.make/demo/images-index.html
+++ b/.make/demo/images-index.html
@@ -10,13 +10,11 @@
   <link rel="stylesheet" href="${ page.CSS_BASE }images.css" />
 </head>
 <body class="${ page.body_class || '' }">
-  <header>
-    <ul class="breadcrumb">
-      $each{ link in breadcrumb }
-        <li><a$if{ link.href } href="${ link.href }"{/}>${ link.label }</a></li>
-      {/}
+  $if{ breadcrumb }<header>
+    <ul class="breadcrumb">$each{ link in breadcrumb }
+      <li><a$if{ link.href } href="${ link.href }"{/}>${ link.label }</a></li>{/}
     </ul>
-  </header>
+  </header>{/}
   <main>
   ${ page.main }
   </main>
