--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -13,17 +13,9 @@
             <img src="${ cwd + '/' + file.path }"/>
           </a>
         </td>
-        <td>
-          <table>
-            <tr>
-              <td>width:</td>
-              <td>${ file.dimensions.width }px</td>
-            </tr>
-            <tr>
-              <td>height:</td>
-              <td>${ file.dimensions.height }px</td>
-            </tr>
-          </table>
+        <td class="_dimensions">
+          <pre><code>width: ${ file.dimensions.width }px
+height: ${ file.dimensions.height }px</code></pre>
         </td>
     </tr>
     <tr class="_link">
