--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -9,7 +9,7 @@
     $each{ file in files }
     <tr class="_row $if{ /white|light/.test(file.path) }_bg-dark{/}">
         <td class="_img">
-          <a href="${ cwd + '/' + file.path }" target="_black">
+          <a href="${ cwd + '/' + file.path }" target="_blank">
             <img src="${ cwd + '/' + file.path }"/>
           </a>
         </td>
