--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -43,20 +43,27 @@ height: ${ file.dimensions.height }px</code></pre>
         }, 1600)
       }
 
+      function _clipboardFallback () {
+        button_el.addEventListener('click', function () {
+          input_el.select()
+          var success = document.execCommand("copy")
+          if( success ) _onSuccess()
+        })
+      }
+
       if( window.Clipboard ) {
-        console.log('Clipboard in window')
-        return new Clipboard(button_el, {
+        navigator.clipboard.writeText(newClip).then(function() {
+          new Clipboard(button_el, {
           target: function() {
             console.log('Clipboard target', input_el)
             return input_el
           }
         }).on('success', _onSuccess)
+        }, _clipboardFallback)
+      } else {
+        _clipboardFallback()
       }
 
-      button_el.addEventListener('click', function () {
-        input_el.select()
-        var success = document.execCommand("copy")
-        if( success ) _onSuccess()
-      })
+      
     })
   </script>
