--- a/.make/demo/images-index.html
+++ b/.make/demo/images-index.html
@@ -7,6 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>${ page.title }</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png }" sizes="16x16">
+  <link rel="manifest" href="/assets/favicons/manifest.json">
+  <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#f7f7f7">
+
   <link rel="stylesheet" href="${ page.CSS_BASE }images.css?t=$build{time}" />
 </head>
 <body class="${ page.body_class || '' }">
