--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -64,7 +64,7 @@ height: ${ file.dimensions.height }px</code></pre>
         })
       }
 
-      if( is_touch_device && window.clipboard ) {
+      if( is_touch_device && navigator.clipboard && navigator.permissions ) {
         navigator.permissions.query({name: "clipboard-write"}).then(function() {
           button_el.addEventListener('click', function () {
             navigator.clipboard.writeText(input_el.value).then(_onSuccess)
