--- a/.make/demo/images-table.html
+++ b/.make/demo/images-table.html
@@ -20,7 +20,7 @@ height: ${ file.dimensions.height }px</code></pre>
     </tr>
     <tr>
       <td class="_link" colspan="2">
-        <input type="text" value="${ file.fullpath }"></input>
+        <input type="text" value="${ file.fullpath }" spellcheck="false"></input>
         <div class="-copied-text"></div>
         <button></button>
       </td>
